# MECH_ENG_333

./: .gitignore  .gitmodules  xc.h
Assignments/Assignment 1/: HelloWorld.c  Makefile
Assignments/Class_10/: INT_timing.c
Assignments/Class_10/hw_src/: 5_3.c  5_4.c  INT_ext_int_p16.c  INT_ext_int_p17.c
Assignments/Class_12/: Makefile  ch24.py  oscope.py
Assignments/Class_14/: ch24.py  oscope.py
Assignments/Class_14/MATLAB/: pid_plot.asv  pid_plot.m  script_24_4.m
Assignments/Class_14/hw_src/: 24_2_2.c  24_3.c  24_5.c  24_7.c  24_8.c  Controller.md
Assignments/Class_18/: Makefile  ch28.py  ch28_itest_genref_example.py  ch28_read_plot_matrix.py  current.h  encoder.c  genref.py  i2c_master_noint.h  main.c  position.h  postion.c  utilities.c  utilities.h
Assignments/Class_2/: Makefile  ascii.c  bubble.c  invest.c
Assignments/Class_6/: Makefile  simplePIC.c
Assignments/Class_8/: Makefile  main.c  sr04.c
Assignments/Class_8/homework_src/: calculate_2c.c  calculate_2c.h  helper_2b.c  helper_2b.h  invest_2a.c  io_2c.c  io_2c.h  main.c  main_2b.c  main_2c.c  simlePIC_p4.c  sr04.c  sr04.h
Assignments/Class_8/skeleton/: Makefile
Assignments/Class_8/src/: simplePIC.c
Assignments/Class_8/utils/: nu32utility
Assignments/Final_Project/: Makefile  ch28.py  current.c  i2c_master_noint.c  ina219.c  ina219.h  main.c  nu32dip.c  nu32dip.h  position.h  postion.c  utilities.c  utilities.h
Assignments/Winter_Break/: CMakeLists.txt  HelloWorld.c  Makefile
Class/01_Quickstart/: nu32utility
Class/09_Output_Compare/: OC_PWM.c
Class/EXTRA_Bootloader/: nu32utility
